source/objects/Travel_Request__c/Travel_Request__c.object-meta.xml
<CustomObject>
    <description>Submit Travel Requests here: https://bluescape.formstack.com/forms/travel_request</description>
    <label>Travel Request</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Travel Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>