source/objects/Travel_Request__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Any additional information you want to provide goes here</description>
    <label>Additional Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>