source/objects/Travel_Request__c/fields/Departure_City_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_City_Airport__c</fullName>
    <description>What city or airport to depart from</description>
    <label>Departure City/Airport</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>