source/objects/Travel_Request__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>What date do you need to start the trip by</description>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>