source/objects/Travel_Request__c/fields/Destination_City_Airport__c.field-meta.xml
<CustomField>
    <fullName>Destination_City_Airport__c</fullName>
    <description>Where are you going to?</description>
    <label>Destination City/Airport</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>