source/objects/Travel_Request__c/fields/Flight_Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Flight_Special_Requests__c</fullName>
    <description>Any special requests for the flight go here</description>
    <label>Flight Special Requests</label>
    <type>TextArea</type>
</CustomField>