source/objects/Travel_Request__c/fields/Hotel_Check_out_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Check_out_Date__c</fullName>
    <label>Hotel Check-out Date</label>
    <type>Date</type>
</CustomField>