source/objects/Travel_Request__c/fields/Hotel_Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Special_Requests__c</fullName>
    <description>Any hotel special requests go here</description>
    <label>Hotel Special Requests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>