source/objects/Travel_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Justification for trip</description>
    <label>Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>