source/objects/Travel_Request__c/fields/Rental_Car_Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Rental_Car_Special_Requests__c</fullName>
    <label>Rental Car Special Requests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>