source/objects/Travel_Request__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>When are you returning from the trip?</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>