source/objects/Travel_Request__c/fields/Return_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Time__c</fullName>
    <description>What time of day to travel?</description>
    <label>Return Time</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Morning (6-8am)</fullName>
            </value>
            <value>
                <fullName>Mid Morning (8-10am)</fullName>
            </value>
            <value>
                <fullName>Late Morning (10-12pm)</fullName>
            </value>
            <value>
                <fullName>Early Afternoon (12-2pm)</fullName>
            </value>
            <value>
                <fullName>Mid Afternoon (2-4pm)</fullName>
            </value>
            <value>
                <fullName>Late Afternoon (4-6pm)</fullName>
            </value>
            <value>
                <fullName>Evening (6-11pm)</fullName>
            </value>
            <value>
                <fullName>Night (11pm-6am)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>