source/objects/Travel_Request__c/fields/Travel_Method__c.field-meta.xml
<CustomField>
    <fullName>Travel_Method__c</fullName>
    <label>Travel Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plane</fullName>
                <default>true</default>
                <label>Plane</label>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>