source/objects/Travel_Request__c/fields/Trip_Title__c.field-meta.xml
<CustomField>
    <fullName>Trip_Title__c</fullName>
    <label>Trip Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>