source/objects/Travel_Request__c/fields/Vehicle_Needed__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Needed__c</fullName>
    <description>Do you need a rental car or additional transportation (e.g. - train)?</description>
    <label>Rental Car</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>