source/objects/Travel_Request__c/validationRules/Departure_and_Return_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_and_Return_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Departure_Date__c &gt;  Return_Date__c</errorConditionFormula>
    <errorMessage>Return date must come after the departure date</errorMessage>
</ValidationRule>