source/objects/Travel_Request__c/validationRules/Hotel_Check_in_and_Check_out_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Hotel_Check_in_and_Check_out_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>Hotel_Check_in_Date__c &gt; Hotel_Check_out_Date__c</errorConditionFormula>
    <errorMessage>Hotel Check-out date has to come after the check-in date.</errorMessage>
</ValidationRule>