source/objects/Travel_Request__c/validationRules/Hotel_Dates_inside_Travel_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Hotel_Dates_inside_Travel_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>( NOT(ISNULL(Hotel_Check_in_Date__c)) &amp;&amp; Hotel_Check_in_Date__c &lt; Departure_Date__c )||( NOT(ISNULL(Hotel_Check_out_Date__c)) &amp;&amp; Hotel_Check_out_Date__c &gt; Return_Date__c )</errorConditionFormula>
    <errorMessage>Hotel dates need to be within the travel dates.</errorMessage>
</ValidationRule>