source/objects/Travel_Request__c/listViews/All_Travel_Requests.listView-meta.xml
<ListView>
    <fullName>All_Travel_Requests</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Trip_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Departure_City_Airport__c</columns>
    <columns>Destination_City_Airport__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Return_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Travel Requests</label>
    <language>en_US</language>
</ListView>