source/objects/Travel_Request__c/listViews/Approved_Travel_Requests.listView-meta.xml
<ListView>
    <fullName>Approved_Travel_Requests</fullName>
    <columns>NAME</columns>
    <columns>Trip_Title__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Travel_Method__c</columns>
    <columns>Destination_City_Airport__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Return_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Travel Requests</label>
    <language>en_US</language>
</ListView>